# my-project

./: .coveragerc  .flake8  .gitignore  LIFE_INSURANCE_STRUCTURE.md  Makefile  PHASE_7.1.2_COMPLETION_REPORT.md  PHASE_7.1.3_COMPLETION_REPORT.md  README.md  README_old.md  VERIFICATION_GUIDE.md  bandit_report.json  main.py  pyproject.toml  requirements.txt  run_life_insurance_app.py  run_tests.ps1  test_return_rate.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  deploy-streamlit.yml  security.yml
.streamlit/: config.toml
REFACTORING/: CHECKLIST.md  FILES.md  GIT_GUIDE.md  GIT_WORKFLOW.md  INDEX.md  MASTER_PLAN.md  PROGRESS.md  QUICKSTART.md  README.md  RELEASE_NOTES.md
REFACTORING/PHASE_1/: CHECKPOINT_2025-10-25.md  COMPLETION_REPORT.md  FILES_CHANGED.md  TASKS.md
REFACTORING/PHASE_2/: ANALYSIS.md  COMPLETION_REPORT.md  (+6 more)
archive/: INVENTORY.md  README.md  README_old_backup.md
common/: __init__.py
docs/: CONTRIBUTING.md  DOCS_INVENTORY.md  DOCUMENTATION_STRUCTURE.md  EXECUTION_SUMMARY_BRAND_MASTER.md  FEATURE_COMPARISON.md  INDEX.md  LIFE_INSURANCE_STRUCTURE.md  PHASE_7.3_COMPLETION_REPORT.md  PHASE_7.4_COMPLETION_REPORT.md  PHASE_7_SUMMARY.md  PROGRESS.md  REFACTORING.md  RESTRUCTURE_REPORT.md  VERIFICATION_GUIDE.md  WITHDRAWAL_REINVESTMENT_GUIDE.md
investment_simulation/: README_BRAND_MASTER.md  __init__.py
life_insurance/: __init__.py  config.py
pension_calc/: __init__.py
scripts/: demo_brand_master.py  run_comparison_app.py  run_investment_app.py  run_life_insurance_app.py  run_pension_app.py  run_vehicle_app.py  temp_calc_investment.py
tests/: test_actual_expense.py  test_analyze_all_strategies.py  test_brand_v3.py  test_pension_calculator_integration.py  test_pension_utils.py  test_vehicle_registration.py
vehicle_finance/: README.md  __init__.py
(+109 files in other folders)
